samples/_failures_safe/1761129381_47db72_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ba0569c0.c: In function ‘main’:
./samples/SAFE/__tmp_ba0569c0.c:140:16: error: missing terminating " character
  140 |         printf("Invalid log level.\
      |                ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ba0569c0.c:140:9: error: expected expression at end of input
  140 |         printf("Invalid log level.\
      |         ^~~~~~
./samples/SAFE/__tmp_ba0569c0.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ba0569c0.c:140:9: error: expected declaration or statement at end of input
